--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="#" class="h2 mb-0">Your Name</a></h1>
+            <h1 class="mb-0 site-logo"><a href="#" class="h2 mb-0">Chris Najera</a></h1>
           </div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
@@ -133,7 +133,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
           
-            <img src="images/Birthday Paradox Simulation.jpg" alt="OutPut of Code Being rRan" class="img-fluid">
+            <img src="images/Birthday Paradox Simulation.jpg" alt="OutPut of Code Being Ran" class="img-fluid">
           
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
