Added a couple more photos to showcase code from Birthday Paradox Proeject

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
           
             <img src="images/Birthday Paradox Simulation.jpg" alt="OutPut of Code Being Ran" class="img-fluid">
+
+            <img src="images/Trial.java Screenshot.jpg" alt="Trial.java File" class="img-fluid">
+
+            <img src="images/Experiment.Java Screenshot.jpg" alt="Experiment.java File" class="img-fluid">
           
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
