--- a/index.html
+++ b/index.html
@@ -178,9 +178,12 @@
 <!-- PROJECT 2: Elevator Simulation -->
 <div class="row mb-5">
   <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-    <img src="images/BuildingClass1.jpg" alt="Building Class Code" class="img-fluid mb-3">
+    <img src="images/BuildingClass.jpg" alt="Building Class Code" class="img-fluid mb-3">
     <img src="images/BuildingClass2.jpg" alt="Building Class Code Pt.2" class="img-fluid mb-3">
     <img src="images/BuildingClass3.jpg" alt="Building Class Code Pt.3" class="img-fluid">
+    <img src="images/Photo of Simulation ran Pt.1.jpg" alt="Building Class Code Pt.3" class="img-fluid">
+    <img src="images/Photo of Simulation Ran Pt.2.jpg" alt="Building Class Code Pt.3" class="img-fluid">
+    
   </div>
   <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
     <div class="mb-4">
