--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
   <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
     <img src="images/BuildingClass.jpg" alt="Building Class Code" class="img-fluid mb-3">
     <img src="images/BuildingClass2.jpg" alt="Building Class Code Pt.2" class="img-fluid mb-3">
-    <img src="images/BuildingClass3.jpg" alt="Building Class Code Pt.3" class="img-fluid">
-    <img src="images/Photo of Simulation ran Pt.1.jpg" alt="Building Class Code Pt.3" class="img-fluid">
+    <img src="images/BuildingClass3.jpg" alt="Building Class Code Pt.3" class="img-fluid mb-3">
+    <img src="images/Photo of Simulation ran Pt.1.jpg" alt="Building Class Code Pt.3" class="img-fluid mb-3">
     <img src="images/Photo of Simulation Ran Pt.2.jpg" alt="Building Class Code Pt.3" class="img-fluid">
     
   </div>
