--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <img src="images/BuildingClass.jpg" alt="Building Class Code" class="img-fluid mb-3">
     <img src="images/BuildingClass2.jpg" alt="Building Class Code Pt.2" class="img-fluid mb-3">
     <img src="images/BuildingClass3.jpg" alt="Building Class Code Pt.3" class="img-fluid mb-3">
-    <img src="images/Photo of Simulation ran Pt.1.jpg" alt="Building Class Code Pt.3" class="img-fluid mb-3">
+    <img src="images/Photo of Simulation ran Pt.1.jpg" alt="Building Class Code Pt.3" class="img-fluid mb-3" style="width: 100%; max-width: 800px;">
     <img src="images/Photo of Simulation Ran Pt.2.jpg" alt="Building Class Code Pt.3" class="img-fluid">
     
   </div>
