--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
     <img src="images/BuildingClass3.jpg" alt="Building Class Code Pt.3" class="img-fluid mb-3">
     <img src="images/Photo of Simulation ran Pt.1.jpg"
      alt="Simulator Output"
-     style="display: block; margin: 0 auto; width: 100%; max-width: 900px; border: 1px solid #ccc;">
+     style="display: block; margin: 0 auto; width: 100%; max-width: 1200px; min-width: 800px; border: 1px solid #ccc;">
+
 
     <img src="images/Photo of Simulation Ran Pt.2.jpg" alt="Building Class Code Pt.3" class="img-fluid">
     
