added basketball project

--- a/index.html
+++ b/index.html
@@ -254,6 +254,88 @@
   </div>
 </div>
 
+
+<div class="row mb-5">
+  <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
+    <img src="images/Startup Screen of Simulation.jpg" alt="Simulation Start Up!" class="img-fluid mb-3">
+    <img src="images/ViewTeam photo.jpg" alt="Check out your team!" class="img-fluid mb-3">
+    <img src="images/Simulation of Playoffs photo.jpg" alt="Playoff Mode!" class="img-fluid mb-3">
+    <img src="images/Signing a Rookie.jpg" 
+         alt="Draft a Rookie"
+         style="display: block; margin: 0 auto; width: 100%; max-width: 1200px; min-width: 800px; border: 1px solid #ccc;">
+  </div>
+
+  <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+    <div class="mb-4">
+      <h3>NBA Season Simulation Project</h3>
+      <p><strong>Project Title:</strong> Basketball Franchise Simulator</p>
+
+      <p>
+        Ever since I was a kid I have always been drawn to the sport of basketball, and always had dreams of managing a NBA team, well in this project 2 classmates and I, did our best to put together an NBA Simulation.  
+        We wanted to build a simulation that lets users experience managing a team through a season—making trades, signing players, and competing through playoffs. My partners and I wanted to do something that we thought would be interesting,
+        and engaging
+      </p>
+
+      <p><strong>Functional Requirements:</strong></p>
+      <ul>
+        <li><strong>User Interaction:</strong>
+          <ul>
+            <li>Allows user to select and manage one of 30 NBA teams.</li>
+            <li>Simulates player progression(progress and regress based on age and potential), free agency, and drafting, along with generating rookies and random free agents.</li>
+            <li>Lets users simulate games and watch their record update in real-time.</li>
+          </ul>
+        </li>
+        <li><strong>Season Simulation:</strong>
+          <ul>
+            <li>Simulates an 82-game regular season followed by playoffs, where the top 16 teams by record play against each other in a best of 7 game series.</li>
+            <li>Determines wins based on player star ratings and randomness.</li>
+          </ul>
+        </li>
+        <li><strong>Player and Roster Management:</strong>
+          <ul>
+            <li>Allows signing and cutting players based on salary cap logic.</li>
+            <li>Implements contract years, retirements, and rookie progression.</li>
+          </ul>
+        </li>
+        <li><strong>Output:</strong>
+          <ul>
+            <li>Displays current team stats, salary, roster, and simulated results.</li>
+          </ul>
+        </li>
+      </ul>
+
+      <p><strong>Design Decisions:</strong></p>
+      <p>
+        We designed this simulation using Java and object-oriented principles to keep things modular. Each part of the simulation—like `Player`, `Team`, `League`, and `Operator`—
+        was separated into its own class based on responsibilities. We used abstract classes and inheritance to support different team types (user-controlled and CPU).
+        No external frameworks were used, but we employed Test-Driven Development and pair programming throughout the process.
+      </p>
+
+      <p><strong>Implementation (My Contribution):</strong></p>
+      <ul>
+        <li>Built the `Operator` class which controls user actions and milestone flow.</li>
+        <li>Worked on the `Sequencer` class to simulate games and playoffs.</li>
+        <li>Implemented team selection, milestone advancement, and the free agency logic.</li>
+        <li>Handled Git branching, merging, and collaboration with my partner.</li>
+        <li>Tested and debugged components like game simulation and win tracking.</li>
+      </ul>
+
+      <p><strong>What I Learned:</strong></p>
+      <p>
+        This project helped me think more clearly about how to structure large codebases and simulate real-world logic with Java. 
+        I became confident working with abstract classes, test-driven development, and collaborative Git workflows.
+        Most importantly, I learned how to turn an idea into a working simulation, and it was a blast doing it alongside my partner.
+      </p>
+
+      <p>
+        Check out the full project on GitHub:  
+        <a href="https://github.com/YOUR-GITHUB-USERNAME/basketball-simulator">GitHub Repo</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+
               
     </section>
 
